Fixed verbiage of build types to 'bundled' and 'unbundled', cleaned up some writing, removed package-lock

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A system to build BrightspaceUI/core components for browser consumption",
   "scripts": {
     "build": "rimraf build && rollup -c ./rollup.config.js",
-    "bundle": "rimraf build-bundle && rollup -c ./rollup-bundle.config.js"
+    "build:bundle": "rimraf build-bundled && rollup -c ./rollup-bundled.config.js"
   },
   "repository": {
     "type": "git",
