Added single file and multi file bundle configurations (#1)
* Added single file and multi file bundle configurations

* Cleaned up the examples to not actually include anything, just some example comment lines

* Fixed verbiage of build types to 'bundled' and 'unbundled', cleaned up some writing, removed package-lock

* Semver 1

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "A system to build BrightspaceUI/core components for browser consumption",
   "scripts": {
-    "build": "todo"
+    "build": "rimraf build && rollup -c ./rollup.config.js",
+    "build:bundle": "rimraf build-bundled && rollup -c ./rollup-bundled.config.js"
   },
   "repository": {
     "type": "git",
@@ -11,5 +12,15 @@
   },
   "author": "BraydonKains",
   "license": "Apache-2.0",
-  "homepage": "https://github.com/Brightspace/brightspaceui-core-bundler#readme"
+  "homepage": "https://github.com/Brightspace/brightspaceui-core-bundler#readme",
+  "dependencies": {
+    "@brightspace-ui/core": "^1"
+  },
+  "devDependencies": {
+    "@open-wc/building-rollup": "^1.7.1",
+    "@webcomponents/webcomponentsjs": "^2.4.4",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.26.4",
+    "rollup-plugin-node-resolve": "^5.2.0"
+  }
 }
