--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.26.4",
     "@rollup/plugin-node-resolve": "^9.0.0",
-    "rollup-plugin-workbox": "5.1.0"
+    "rollup-plugin-workbox": "^5.2.1"
   }
 }
